# get_bilibili_favlist_media

./: README.md  pyproject.toml  requirements.txt
minimal_bilibili_api/: __init__.py  audio.py  demo.py  downloader.py  favorite_list.py  login.py  progress.py  video.py
minimal_bilibili_api/data/api/: audio.json  favorite-list.json  login.json  video.json
minimal_bilibili_api/utils/: __init__.py  network.py  utils.py
