[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-bilibili-api"
version = "1.0.0"
description = "精简版哔哩哔哩 API，仅保留登录、收藏夹、音频下载、视频标题功能"
authors = [{name = "Developer"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "curl_cffi>=0.5.0",
    "qrcode>=7.0",
    "qrcode-terminal>=0.8",
]

[project.urls]
Homepage = "https://github.com/your-username/minimal-bilibili-api"
Repository = "https://github.com/your-username/minimal-bilibili-api"

[tool.setuptools.packages.find]
where = ["."]
include = ["minimal_bilibili_api*"]